--- a/spring-boot-started/src/main/resources/templates/index.html
+++ b/spring-boot-started/src/main/resources/templates/index.html
@@ -6,5 +6,8 @@
 	</head>
 	<body>
 		<h1>Hello from my first Spring boot application</h1>
+		<!-- This is the way to do an ankle -->
+		<a th:href="@{/params/string(param='This is a param')}">Link to param</a>
+		<a th:href="@{/params/mix-params(greeting='Hello mix-params', num=777)}">Link to Mix-param</a>
 	</body>
 </html>
